# greedytile

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE.txt  README.md  codecov.yml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: full_generation.rs  selection.rs
src/: lib.rs  main.rs
src/algorithm/: bitset.rs  cache.rs  deadlock.rs  executor.rs  feasibility.rs  mod.rs  propagation.rs  selection.rs
src/analysis/: mod.rs  patterns.rs  statistics.rs  weights.rs
src/io/: analysis.rs  cli.rs  configuration.rs  error.rs  image.rs  mod.rs  prefill.rs  progress.rs  visualization.rs
src/math/: interpolation.rs  mod.rs  probability.rs
src/spatial/: extension.rs  grid.rs  mod.rs  tiles.rs
tests/: algorithm.rs  main.rs
tests/meta/: coverage.rs
tests/unit/: mod.rs
tests/unit/algorithm/: bitset.rs  cache.rs  deadlock.rs  executor.rs  feasibility.rs  mod.rs  propagation.rs  selection.rs
tests/unit/analysis/: mod.rs  patterns.rs  statistics.rs  weights.rs
tests/unit/io/: analysis.rs  cli.rs  configuration.rs  error.rs  image.rs  mod.rs  prefill.rs  progress.rs  visualization.rs
tests/unit/math/: interpolation.rs  mod.rs  probability.rs
tests/unit/spatial/: extension.rs  grid.rs  mod.rs  tiles.rs
