[package]
name = "greedytile"
version = "1.0.0"
edition = "2024"
authors = ["David Gathercole"]
description = "Random greedy pixel pattern generation algorithm"
homepage = "https://github.com/GeEom/greedytile"
repository = "https://github.com/GeEom/greedytile"
license = "MIT"
readme = "README.md"
keywords = ["tiles", "pattern", "generation"]
categories = ["algorithms", "graphics"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bitvec = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["gif"] }
indicatif = "0.18"
ndarray = "0.16"
num-traits = "0.2"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "full_generation"
harness = false

[[bench]]
name = "selection"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
debug = false

[lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"
missing_docs = "deny"
unsafe_code = "deny"
unused = "deny"

[lints.clippy]
# Lint groups
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Deny
used_underscore_binding = "deny"
if_then_some_else_none = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
indexing_slicing = "deny"
result_large_err = "deny"
shadow_unrelated = "deny"
wildcard_imports = "deny"
map_err_ignore = "deny"
enum_glob_use = "deny"
infinite_loop = "deny"
unimplemented = "deny"
print_stderr = "deny"
print_stdout = "deny"
expect_used = "deny"
unwrap_used = "deny"
empty_loop = "deny"
mem_forget = "deny"
dbg_macro = "deny"
panic = "deny"
todo = "deny"
exit = "deny"

# Allow
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
many_single_char_names = "allow"
cast_precision_loss = "allow"
needless_range_loop = "allow"
cast_possible_wrap = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
type_complexity = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
cast_lossless = "allow"
